fixes FS 236 (pulldowns not overflowing on edit skills modal)

--- a/sites/all/themes/asb/sass/modals.scss
+++ b/sites/all/themes/asb/sass/modals.scss
@@ -109,13 +109,13 @@
 		@include border-radius( 3px );
 		@include box-shadow( 4px 4px 6px rgba( black, .2 ) );  
 		padding-top: 1em;
-		padding-bottom: 1em;
+		// padding-bottom: 1em;
 	}
 
 	.popups-body,
 	.modal-content {
-		overflow: auto;
-		padding: 0 1em;
+		overflow: visible !important;
+		padding: 0 1em 1em 1em !important;
 		height: auto !important;
 	}
 
@@ -314,3 +314,13 @@ div.ctools-modal-content .form-type-mfw-managed-file {
   background-position: center center;
   background-repeat: no-repeat;
 }
+
+
+//////////////////////////////
+// Specific fields
+//
+
+.form-item-field-people-skills-und .chosen-container {
+	width: 100% !important;
+}
+
